Make sure the price isn't too long to stay on the top line
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@44614 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_course-info.scss
+++ b/src/main/resources/scss/_course-info.scss
@@ -553,7 +553,7 @@
 
 			.price {
 				float: left;
-				width: 55px;
+				width: 50px;
 				text-align: right;
 				font-weight: 600;
 				font-size: 0.85em;
